// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ts#rdb trpc-connection generator > should add rdb dev dependency to trpc dev 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "metadata": {
    "components": [
      {
        "generator": "ts#rdb#trpc-connection",
        "name": "db",
        "path": "src/middleware/db.ts",
      },
    ],
  },
  "name": "api",
  "root": "packages/api",
  "targets": {
    "dev": {
      "continuous": true,
      "dependsOn": [
        {
          "projects": [
            "db",
          ],
          "target": "dev",
        },
      ],
      "executor": "nx:run-commands",
    },
  },
}
`;

exports[`ts#rdb trpc-connection generator > should generate middleware file for PostgreSQL engine 1`] = `
"import { getPrisma } from 'db';
import { initTRPC } from '@trpc/server';

export interface IDbContext {
  db?: Awaited<ReturnType<typeof getPrisma>>;
}

export const createDbPlugin = () => {
  const t = initTRPC.context<IDbContext>().create();
  return t.procedure.use(async (opts) => {
    const db = await getPrisma();

    return await opts.next({
      ctx: {
        ...opts.ctx,
        db,
      },
    });
  });
};
"
`;

exports[`ts#rdb trpc-connection generator > should generate middleware file with try/finally for MySQL engine 1`] = `
"import { getPrisma } from 'db';
import { initTRPC } from '@trpc/server';

export interface IDbContext {
  db?: Awaited<ReturnType<typeof getPrisma>>;
}

export const createDbPlugin = () => {
  const t = initTRPC.context<IDbContext>().create();
  return t.procedure.use(async (opts) => {
    const db = await getPrisma();

    try {
      return await opts.next({
        ctx: {
          ...opts.ctx,
          db,
        },
      });
    } finally {
      await db.$disconnect();
    }
  });
};
"
`;

exports[`ts#rdb trpc-connection generator > should widen the root context in init.ts 1`] = `
"import { IDbContext } from './middleware/db.js';
import { initTRPC } from '@trpc/server';
import {
  createErrorPlugin,
  createLoggerPlugin,
  IMiddlewareContext,
} from './middleware/index.js';

export type Context = IMiddlewareContext & IDbContext;

export const t = initTRPC.context<Context>().create();

export const publicProcedure = t.procedure
  .concat(createLoggerPlugin())
  .concat(createErrorPlugin());
"
`;

exports[`ts#rdb trpc-connection generator > should widen the root context once per database 1`] = `
"import { IOtherDbContext } from './middleware/other-db.js';
import { IDbContext } from './middleware/db.js';
import { initTRPC } from '@trpc/server';
import {
  createErrorPlugin,
  createLoggerPlugin,
  IMiddlewareContext,
} from './middleware/index.js';

export type Context = IMiddlewareContext & IDbContext & IOtherDbContext;

export const t = initTRPC.context<Context>().create();

export const publicProcedure = t.procedure
  .concat(createLoggerPlugin())
  .concat(createErrorPlugin());
"
`;
